linked images in html

--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
         }
 
         .content img {
-            width: 150px;
-            height: 150px;
+            width: auto;
+            height: auto;
+            max-height: 300px;
             border-radius: 15px;
             /* Abgerundete Kanten */
             margin-right: 1rem;
@@ -190,7 +191,7 @@
     <div class="container">
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/target.png" alt="Placeholder Image">
                 <div>
                     <h2>Projektziel</h2>
                     <p>Entwicklung einer Anwendung zur Bewertung, Protokollierung und Übermittlung der Wegebeschaffenheit von Fahrrad-Routen. Verwendetes Gerät: M5Stack Core 2. Datenerfassung durch Erschütterungsmessung auf verschiedenen Wegtypen.</p>
@@ -200,7 +201,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/classification.png" alt="Placeholder Image">
                 <div>
                     <h2>Klassifizierung der Wegebeschaffenheit</h2>
                     <table>
@@ -243,7 +244,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/strategy.png" alt="Placeholder Image">
                 <div>
                     <h2>Umsetzungsplan</h2>
                     <ol>
@@ -257,7 +258,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/datacapture.png" alt="Placeholder Image">
                 <div>
                     <h2>Datenerfassung</h2>
                     <p>Methoden: Sensorrohdaten (Beschleunigung und Gyro) auslesen und auf SD-Karte speichern. Mehrere Datensätze für verschiedene Untergründe sammeln.</p>
@@ -267,7 +268,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/dataanalysis.png" alt="Placeholder Image">
                 <div>
                     <h2>Datenanalyse</h2>
                     <p>Verwendete Tools: KNIME Analytics Platform. Prozess: Rohdaten analysieren, Verarbeitungstests durchführen, Funktionalität bestimmen.</p>
@@ -277,7 +278,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/classificationstrategy.png" alt="Placeholder Image">
                 <div>
                     <h2>Klassifizierungsstrategie</h2>
                     <p>Methode: Schwellenwerte für jeden Wegetyp basierend auf Testdaten definieren. Echtzeitvergleich der Sensordaten mit den Schwellenwerten.</p>
@@ -287,7 +288,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/datatransmission.png" alt="Placeholder Image">
                 <div>
                     <h2>Datenübermittlung</h2>
                     <p>Prozess: Startnachricht an den Server senden. Aufnahme nach 5 Minuten Inaktivität stoppen. JSON-Nachricht via HTTP-POST senden.</p>
@@ -297,7 +298,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/vscode.png" alt="Placeholder Image">
                 <div>
                     <h2>VS-Code für die Entwicklung</h2>
                     <p>Gründe: Unterstützung von C++. Erweiterbar mit Plugins (z.B. PlatformIO). GitHub-Integration für Teamarbeit.</p>
@@ -307,7 +308,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/projectphases.png" alt="Placeholder Image">
                 <div>
                     <h2>Projektphasen</h2>
                     <ol>
@@ -323,7 +324,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/timetable.png" alt="Placeholder Image">
                 <div>
                     <h2>Meeting-Zeitplan</h2>
                     <p>Wöchentliche Meetings: Dienstags, 10:00-14:30. Kommunikation: GitHub, WhatsApp, Discord.</p>
@@ -333,7 +334,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/freertos.png" alt="Placeholder Image">
                 <div>
                     <h2>Programmstruktur</h2>
                     <p>Aufgaben: Zeitsynchronisation, GPS-Daten sammeln, Display-Updates, Datenübertragung. RTOS: FreeRTOS für Aufgabenunabhängigkeit.</p>
@@ -343,7 +344,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/function.png" alt="Placeholder Image">
                 <div>
                     <h2>Wichtige Funktionen</h2>
                     <p>NtpTask: Zeit via Wi-Fi synchronisieren. DisplayTask: Display mit GPS-Daten und Wegtyp aktualisieren. GpsTask: GPS-Daten sammeln.</p>
@@ -353,7 +354,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/event.png" alt="Placeholder Image">
                 <div>
                     <h2>Klassifizierung & Ereigniserkennung</h2>
                     <p>IMU-Datenverarbeitung: Kontinuierliche Analyse für Wegtyp. Effiziente Berechnung mittels Exponential Moving Average. Ereigniserkennung: Schlaglöcher durch Beschleunigungsänderungen identifizieren.</p>
@@ -363,7 +364,7 @@
 
         <section class="hidden">
             <div class="content content-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/summary.png" alt="Placeholder Image">
                 <div>
                     <h2>Ergebnisse & Bewertung</h2>
                     <p>Erfolge: Vielseitiger Einsatz des M5 Stack, UI-Anpassung, Datenübertragung. Herausforderungen: Anfangs Wissenslücken, ungleiche Aufgabenverteilung, knappe Zeit.</p>
@@ -373,7 +374,7 @@
 
         <section class="hidden">
             <div class="content content-right">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/sources.png" alt="Placeholder Image">
                 <div>
                     <h2>Quellen</h2>
                     <p>Quellen: M5 Stack Dokumentation, Beispielcode von GitHub, KNIME, VS Code, PlatformIO.</p>
