--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadmapper 9000</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">    <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #121212;
-            /* Hintergrund dunkel */
             color: #fff;
-            /* Textfarbe hell */
             overflow-x: hidden;
         }
 
@@ -42,18 +39,13 @@
             margin-bottom: 2rem;
             position: relative;
             opacity: 0;
-            /* Startzustand der Animation */
             transform: translateY(40px);
-            /* Startzustand der Animation, doppelt so stark */
             transition: opacity 1s ease-out, transform 1s ease-out;
-            /* Transition für die Animation */
         }
 
         section.visible {
             opacity: 1;
-            /* Endzustand der Animation */
             transform: translateY(0);
-            /* Endzustand der Animation */
         }
 
         section::before {
@@ -66,9 +58,7 @@
             border: 5px solid transparent;
             border-image: linear-gradient(to bottom right, magenta, cyan) 1;
             border-radius: 15px;
-            /* Passend zum äußeren Radius */
             z-index: 0;
-            /* Unter den Inhalt legen */
             pointer-events: none;
             background-clip: border-box;
         }
@@ -79,13 +69,10 @@
             justify-content: space-between;
             padding: 1.5rem;
             border-radius: 15px;
-            /* Ecken abgerundet */
             background: rgba(255, 255, 255, 0.1);
-            /* Hintergrund für sichtbare Rundungen */
             z-index: 1;
-            /* Über dem Pseudo-Element */
             position: relative;
-            /* Sicherstellen, dass der content über dem Pseudo-Element liegt */
+            flex-wrap: wrap;
         }
 
         .content img {
@@ -93,10 +80,8 @@
             height: auto;
             max-height: 300px;
             border-radius: 15px;
-            /* Abgerundete Kanten */
             margin-right: 1rem;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            /* Leichter Schatten */
         }
 
         .content-left {
@@ -105,6 +90,11 @@
 
         .content-right {
             flex-direction: row-reverse;
+        }
+
+        .content > div {
+            flex: 1;
+            margin: 0.5rem;
         }
 
         footer {
@@ -153,7 +143,6 @@
             from {
                 opacity: 0;
                 transform: translateY(40px);
-                /* Doppelt so stark */
             }
 
             to {
@@ -177,7 +166,67 @@
         .hidden {
             opacity: 0;
             transform: translateY(40px);
-            /* Doppelt so stark */
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            .container {
+                width: 95%;
+                padding: 1rem 0;
+            }
+
+            .content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .content img {
+                margin: 0 auto 1rem;
+                max-height: 200px;
+            }
+
+            .content-left {
+                flex-direction: column;
+            }
+
+            .content-right {
+                flex-direction: column;
+            }
+
+            table,
+            th,
+            td {
+                font-size: 0.9rem;
+            }
+
+            th,
+            td {
+                padding: 0.5rem;
+            }
+
+            section::before {
+                border-width: 3px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            .content img {
+                max-height: 150px;
+            }
+
+            table,
+            th,
+            td {
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
