aded UI section

--- a/index.html
+++ b/index.html
@@ -466,6 +466,21 @@
         </section>
 
         <section class="hidden">
+            <div class="content content-right">
+                <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/ui.png" alt="Placeholder Image">
+                <div>
+                    <h2>User interface</h2>
+                    <ul>
+                        <li>Aktuelle Zeit</li>
+                        <li>GPS Daten</li>
+                        <li>Erkannter Untergrund</li>
+                        <li>Knopf zum senden der daten</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="hidden">
             <div class="content content-left">
                 <img src="https://raw.githubusercontent.com/Syntoxr/Roadmapper9000Website/main/assets/summary.png" alt="Placeholder Image">
                 <div>
@@ -507,7 +522,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Projektgruppe 2 - Bewertung der Wegebeschaffenheit von Fahrrad-Routen</p>
+        <p>2024 Projektgruppe 2 - Roadmapper 9000</p>
     </footer>
 
     <script>
