--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                         <li>Aktuelle Zeit</li>
                         <li>GPS Daten</li>
                         <li>Erkannter Untergrund</li>
-                        <li>Knopf zum senden der daten</li>
+                        <li>Knopf zum senden der Daten</li>
                     </ul>
                 </div>
             </div>
